--- a/src/DamnSmallMapper/DamnSmallMapper.csproj
+++ b/src/DamnSmallMapper/DamnSmallMapper.csproj
@@ -5,10 +5,13 @@
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<PackageId>DamnSmallMapper</PackageId>
-		<Version>0.2.0</Version>
+		<Version>0.3.0</Version>
 		<Authors>Roman Bobkov</Authors>
 		<Company>Rombique</Company>
 		<LangVersion>8</LangVersion>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryUrl>https://github.com/Rombique/DamnSmallMapper.git</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
 	</PropertyGroup>
 
 </Project>
